--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "react-dom": "^18",
     "react-redux": "^9.1.0",
     "react-toastify": "^10.0.4",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "13.5.2",
